# Extensive-AI-Agents-V3

./: README.md
00_Helper_Functions/: readme guide.txt
04_MCP_The_Tool_Protocol/01_asyncio/: 01_asyncio.py
04_MCP_The_Tool_Protocol/02_MCP_Basics/: 03_AgenticMCPUse.py  AgenticMCPUse.py  mcp_client.py  mcp_server.py
0_GitHub_Refresher/: 1.txt  New Text Document.txt  Readme.md
0_GitHub_Refresher/git_one/: one.txt  two.txt
1_Foundations_of_Transformer_Architecture/: README.md
1_Foundations_of_Transformer_Architecture/Session Summary/: Problem Statement.docx  Session Summary.md
1_Foundations_of_Transformer_Architecture/job-gap-coach-ver-1/: manifest.json  sidepanel.html  sidepanel.js
2_ Modern_LLM_Internals_SFT_Foundation/Session Summary/: Session Summary.md
2_ Modern_LLM_Internals_SFT_Foundation/job-gap-coach-ver-2/: gemini.js  manifest.json  sidepanel.html  sidepanel.js
3_Developer_Foundations_Your_First_Agent/: README.md
3_Developer_Foundations_Your_First_Agent/job-gap-coach-ver-3/: background.js  content.js  gemini.js  (+4 more)
4_MCP_The_Tool_Protocol/03_Assignment/: 2026-05-03-llm-career.html  LLM Career Copilot Weekly Brief.docx  README.md  client.py  main.py  pyproject.toml  server.py  ~$M Career Copilot Weekly Brief.docx
4_MCP_The_Tool_Protocol/03_Assignment/Infographics/: client.py
4_MCP_The_Tool_Protocol/03_Assignment/sandbox/data/briefs/: 2026-05-02-llm-career.md  2026-05-03-llm-career.md
4_MCP_The_Tool_Protocol/03_Assignment/sandbox/data/cache/: jobs_latest.md  news_latest.md  papers_latest.md  repos_latest.md
5_/: Axiom — Learning OS.html
(+68 files in other folders)
